--- a/02/index.html
+++ b/02/index.html
@@ -12,6 +12,6 @@
  <body>
  
  	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
- 	<script src="r-sketch-01.js"></script>
+ 	<script src="r-sketch.js"></script>
  </body>
  </html>
