--- a/02/index.html
+++ b/02/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	<title>Processing R Sketch Day 01</title>
+ 	<title>Processing R Sketch Day 02</title>
  </head>
 <style>
 	canvas{
@@ -12,6 +12,6 @@
  <body>
  
  	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
- 	<script src="r-sketch.js"></script>
+ 	<script src="r-sketch-02.js"></script>
  </body>
  </html>
