--- a/24/index.html
+++ b/24/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html>
  <head>
- 	<title>Processing R Sketch Day ??</title>
+ 	<title>Processing R Sketch Day 24</title>
  </head>
 <style>
 	canvas{
@@ -12,6 +12,6 @@
  <body>
  
  	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
- 	<script src="r-sketch-scaley.js"></script>
+ 	<script src="r-sketch-24.js"></script>
  </body>
  </html>
